crates/voom-cli/tests/snapshots/lease_envelope__acquire_on_unknown_scope_is_not_found.snap
---
source: crates/voom-cli/tests/lease_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "lease",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "NOT_FOUND",
    "message": "not found: use_lease scope asset 999 not found"
  }
}
