crates/voom-cli/tests/snapshots/lease_envelope__force_release_rejects_empty_reason.snap
---
source: crates/voom-cli/tests/lease_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "lease",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "CONFIG_INVALID",
    "message": "config error: reason must not be empty or whitespace"
  }
}
