crates/voom-cli/tests/snapshots/lease_envelope__list_is_empty_on_clean_db.snap
---
source: crates/voom-cli/tests/lease_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "lease",
  "status": "ok",
  "data": {
    "locks": []
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
